更新 mDNS 配置，默认启用；在 P2PNode 中添加 mDNS 允许检查逻辑；新增 P2PDiscoveryTests 测试用例以验证 mDNS 设置

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # FolderSync environment configuration
-# Set to false/0/no to disable local-network mDNS peer discovery (helps avoid crashes on machines without active IPv4 interfaces)
-FOLDERSYNC_ENABLE_MDNS=false
+# Set to false/0/no to disable local-network mDNS peer discovery (enabled by default for peer auto-discovery)
+FOLDERSYNC_ENABLE_MDNS=true
 
 # Add additional configuration here as needed
 # EXAMPLE_PLACEHOLDER=
