更新 README.md，增加核心功能和项目描述部分，优化架构说明；修改 .vscode/launch.json，调整调试配置为 lldb 并添加程序路径。

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,26 @@
 {
     "configurations": [
         {
-            "type": "swift",
+            "type": "lldb",
             "request": "launch",
             "args": [],
             "cwd": "${workspaceFolder:FolderSync}",
             "name": "Debug FolderSync",
             "target": "FolderSync",
             "configuration": "debug",
-            "preLaunchTask": "swift: Build Debug FolderSync"
+            "preLaunchTask": "swift: Build Debug FolderSync",
+            "program": "${workspaceFolder:FolderSync}/.build/debug/FolderSync"
         },
         {
-            "type": "swift",
+            "type": "lldb",
             "request": "launch",
             "args": [],
             "cwd": "${workspaceFolder:FolderSync}",
             "name": "Release FolderSync",
             "target": "FolderSync",
             "configuration": "release",
-            "preLaunchTask": "swift: Build Release FolderSync"
+            "preLaunchTask": "swift: Build Release FolderSync",
+            "program": "${workspaceFolder:FolderSync}/.build/release/FolderSync"
         }
     ]
 }
