--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,24 @@
 {
     "configurations": [
         {
-            "type": "lldb",
+            "type": "swift",
             "request": "launch",
             "args": [],
             "cwd": "${workspaceFolder:FolderSync}",
             "name": "Debug FolderSync",
-            "program": "${workspaceFolder:FolderSync}/.build/debug/FolderSync",
-            "preLaunchTask": "swift: Build Debug FolderSync"
+            "preLaunchTask": "swift: Build Debug FolderSync",
+            "target": "FolderSync",
+            "configuration": "debug"
         },
         {
-            "type": "lldb",
+            "type": "swift",
             "request": "launch",
             "args": [],
             "cwd": "${workspaceFolder:FolderSync}",
             "name": "Release FolderSync",
-            "program": "${workspaceFolder:FolderSync}/.build/release/FolderSync",
-            "preLaunchTask": "swift: Build Release FolderSync"
+            "preLaunchTask": "swift: Build Release FolderSync",
+            "target": "FolderSync",
+            "configuration": "release"
         }
     ]
 }
