refactor: Update FolderMonitor and SyncEngine for improved file change handling and snapshot management
- Removed the test target from Package.swift.
- Updated launch configurations in VSCode to use lldb for debugging.
- Enhanced FolderMonitor to include flags in file change detection.
- Improved SyncEngine with atomic snapshot saving for folder states.
- Added localization strings for local change history and actions.
- Refactored code for better readability and consistency across components.
- Removed obsolete test files to streamline the codebase.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,26 @@
 {
     "configurations": [
         {
-            "type": "swift",
+            "type": "lldb",
             "request": "launch",
             "args": [],
             "cwd": "${workspaceFolder:FolderSync}",
             "name": "Debug FolderSync",
             "preLaunchTask": "swift: Build Debug FolderSync",
             "target": "FolderSync",
-            "configuration": "debug"
+            "configuration": "debug",
+            "program": "${workspaceFolder:FolderSync}/.build/debug/FolderSync"
         },
         {
-            "type": "swift",
+            "type": "lldb",
             "request": "launch",
             "args": [],
             "cwd": "${workspaceFolder:FolderSync}",
             "name": "Release FolderSync",
             "preLaunchTask": "swift: Build Release FolderSync",
             "target": "FolderSync",
-            "configuration": "release"
+            "configuration": "release",
+            "program": "${workspaceFolder:FolderSync}/.build/release/FolderSync"
         }
     ]
 }
